[package]
name = "loopswap-staking"
version = "1.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "Null"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw0 = { version = "0.10.3" }  
cw2 = { version = "0.13.2" } 
cw20 = {version = "0.13.2"}
cw-storage-plus  = { version = "0.13.2" } 
cosmwasm-std = { version = "1.0.0" }
integer-sqrt = "0.1.5"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
cw20-base = { version = "0.13.2"}
prost = "0.9"
protobuf = { version = "3.0.2", features = ["with-bytes"] }
loopswap = { path = "../../packages/loopswap/" }
loopswap-lopo-token = { path= "../loopswap_lopo_token/"}
cw-utils = "0.13.4"


[dev-dependencies]
cosmwasm-schema = "1.0.0"
cosmwasm-storage = { version = "1.0.0" }
chrono = {version = "0.4.20" }